--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="icons">
 					<h3>Vinycios Navarro</h3>
 					<a href="https://www.linkedin.com/in/vinycios-navarro-de-lima-santos-b2a132218"><ion-icon name="logo-linkedin"></ion-icon></a>
-					<a href=""><ion-icon name="logo-github"></ion-icon></a>
+					<a href="https://github.com/vinyciosnavarro07"><ion-icon name="logo-github"></ion-icon></a>
 					<a href="https://www.instagram.com/viny_n03/"><ion-icon name="logo-instagram"></ion-icon></a>	
 
 				</div>
